// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SalaryAnalytics Page > Empty state (no offers) > renders empty state when no salary data is available 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-950 p-6"
  >
    <div
      class="max-w-7xl mx-auto"
    >
      <div
        class="bg-gray-800 border border-gray-600 rounded-lg p-6"
      >
        <p
          class="text-gray-400 text-center"
        >
          No salary data available
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`SalaryAnalytics Page > Error state > renders error message when there is an error 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-950 p-6"
  >
    <div
      class="max-w-7xl mx-auto"
    >
      <div
        class="bg-red-900/20 border border-red-600/30 rounded-lg p-6"
      >
        <h2
          class="text-xl font-semibold text-red-400 mb-2"
        >
          Failed to Load Salary Analytics
        </h2>
        <p
          class="text-red-300"
        >
          There was an error loading your salary data. Please try again later.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`SalaryAnalytics Page > Loading state > renders loading skeleton when data is loading 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-950 p-6"
  >
    <div
      class="max-w-7xl mx-auto text-center"
    >
      <div
        class="animate-pulse mb-8"
      >
        <div
          class="h-8 bg-gray-800 rounded w-1/3 mx-auto mb-4"
        />
        <div
          class="h-4 bg-gray-800 rounded w-1/2 mx-auto mb-8"
        />
      </div>
      <div
        class="bg-gray-800 border border-gray-600 rounded-xl p-8 max-w-md mx-auto"
      >
        <div
          class="animate-spin rounded-full h-16 w-16 border-b-2 border-blue-500 mx-auto mb-4"
        />
        <h2
          class="text-xl font-semibold text-white mb-2"
        >
          Loading Salary Analytics
        </h2>
        <p
          class="text-gray-400 mb-4"
        >
          Analyzing your data and generating insights...
        </p>
        <div
          class="w-full bg-gray-700 rounded-full h-2 mb-4"
        >
          <div
            class="bg-blue-500 h-2 rounded-full animate-pulse"
            style="width: 60%;"
          />
        </div>
        <p
          class="text-sm text-gray-500"
        >
          This may take a few seconds for the first load
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`SalaryAnalytics Page > Low signal state (1-2 offers) > renders CollectMoreData component for insufficient data 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-950 p-6"
  >
    <div
      class="max-w-7xl mx-auto space-y-8"
    >
      <div
        class="text-center relative"
      >
        <h1
          class="text-4xl font-bold text-white mb-4"
        >
          Salary Analytics
        </h1>
        <p
          class="text-xl text-gray-300 mb-6"
        >
          Turn your job data into negotiation power.
        </p>
      </div>
      <div
        class="bg-gradient-to-br from-blue-900/20 to-purple-900/20 border border-blue-600/30 rounded-xl p-8 "
      >
        <div
          class="text-center mb-6"
        >
          <div
            class="text-4xl mb-4"
          >
            📊
          </div>
          <h2
            class="text-2xl font-bold text-white mb-2"
          >
            Need More Data for Reliable Insights
          </h2>
          <p
            class="text-blue-200 text-lg"
          >
            With just a few data points, your analytics may not be accurate. Add more to get better insights:
          </p>
        </div>
        <div
          class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6"
        >
          <div
            class="bg-blue-900/20 border border-blue-600/30 rounded-lg p-6"
          >
            <h3
              class="text-lg font-semibold text-blue-300 mb-4 flex items-center"
            >
              <span
                class="text-2xl mr-3"
              >
                💡
              </span>
              Quick Actions
            </h3>
            <ul
              class="space-y-3 text-blue-200"
            >
              <li
                class="flex items-start"
              >
                <span
                  class="text-blue-400 mr-2"
                >
                  •
                </span>
                <span>
                  Add salary ranges from job postings you're interested in
                </span>
              </li>
              <li
                class="flex items-start"
              >
                <span
                  class="text-blue-400 mr-2"
                >
                  •
                </span>
                <span>
                  Track salary offers from different companies
                </span>
              </li>
            </ul>
          </div>
          <div
            class="bg-purple-900/20 border border-purple-600/30 rounded-lg p-6"
          >
            <h3
              class="text-lg font-semibold text-purple-300 mb-4 flex items-center"
            >
              <span
                class="text-2xl mr-3"
              >
                🎯
              </span>
              Pro Tips
            </h3>
            <ul
              class="space-y-3 text-purple-200"
            >
              <li
                class="flex items-start"
              >
                <span
                  class="text-purple-400 mr-2"
                >
                  •
                </span>
                <span>
                  Record salary data from your network and industry research
                </span>
              </li>
              <li
                class="flex items-start"
              >
                <span
                  class="text-purple-400 mr-2"
                >
                  •
                </span>
                <span>
                  Include benefits and equity information when available
                </span>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="inline-flex items-center space-x-2 bg-blue-600/20 border border-blue-500/30 rounded-lg px-4 py-2"
          >
            <span
              class="text-blue-300"
            >
              📈
            </span>
            <span
              class="text-blue-200 text-sm"
            >
              Target: 
              5+ offers
               for reliable insights
            </span>
          </div>
        </div>
      </div>
      <div
        class="bg-gray-800 border border-gray-600 rounded-xl p-8"
      >
        <h2
          class="text-2xl font-bold text-white mb-6"
        >
          Your Salary Position
        </h2>
        <div
          class="grid grid-cols-1 md:grid-cols-2 gap-8"
        >
          <div
            class="text-center"
          >
            <p
              class="text-4xl font-bold text-blue-400 mb-2"
            >
              $60k
            </p>
            <p
              class="text-gray-400"
            >
              Your Average
            </p>
          </div>
          <div
            class="text-center"
          >
            <p
              class="text-4xl font-bold text-green-400 mb-2"
            >
              $60k
            </p>
            <p
              class="text-gray-400"
            >
              Median
            </p>
          </div>
        </div>
        <div
          class="mt-6 text-center"
        >
          <p
            class="text-gray-300"
          >
            Limited data—add more offers to improve accuracy.
          </p>
        </div>
        <div
          class="mt-4 text-center"
        >
          <p
            class="text-yellow-300"
          >
            💡 Most offers cluster below your typical target—consider raising the bar.
          </p>
        </div>
      </div>
      <div
        class="bg-gray-800 border border-gray-600 rounded-xl p-8 text-center"
      >
        <h2
          class="text-2xl font-bold text-white mb-4"
        >
          Export Your Data
        </h2>
        <p
          class="text-gray-300 mb-6"
        >
          Download your salary analytics summary for negotiations and career planning.
        </p>
        <div
          class="flex justify-center space-x-4"
        >
          <button
            class="bg-blue-600 hover:bg-blue-700 disabled:bg-gray-600 disabled:cursor-not-allowed text-white px-6 py-3 rounded-lg font-medium transition-colors"
          >
            📄 Export as Markdown
          </button>
          <button
            class="bg-green-600 hover:bg-green-700 disabled:bg-gray-700 disabled:cursor-not-allowed text-white px-6 py-3 rounded-lg font-medium transition-colors"
          >
            📊 Export as CSV
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SalaryAnalytics Page > Normal state (5+ offers) > renders full analytics when sufficient data is available 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-950 p-6"
  >
    <div
      class="max-w-7xl mx-auto space-y-8"
    >
      <div
        class="text-center relative"
      >
        <h1
          class="text-4xl font-bold text-white mb-4"
        >
          Salary Analytics
        </h1>
        <p
          class="text-xl text-gray-300 mb-6"
        >
          Turn your job data into negotiation power.
        </p>
      </div>
      <div
        class="bg-gray-800 border border-gray-600 rounded-xl p-8"
      >
        <h2
          class="text-2xl font-bold text-white mb-6"
        >
          Your Salary Position
        </h2>
        <div
          class="grid grid-cols-1 md:grid-cols-2 gap-8"
        >
          <div
            class="text-center"
          >
            <p
              class="text-4xl font-bold text-blue-400 mb-2"
            >
              $75k
            </p>
            <p
              class="text-gray-400"
            >
              Your Average
            </p>
          </div>
          <div
            class="text-center"
          >
            <p
              class="text-4xl font-bold text-green-400 mb-2"
            >
              $70k
            </p>
            <p
              class="text-gray-400"
            >
              Median
            </p>
          </div>
        </div>
        <div
          class="mt-6 text-center"
        >
          <p
            class="text-gray-300"
          >
            Your top offers sit around the 75th percentile (≈
             
            $85k
            ).
          </p>
        </div>
        <div
          class="mt-4 text-center"
        >
          <p
            class="text-blue-300"
          >
            💡 You have several high outliers—use them to anchor negotiations.
          </p>
        </div>
      </div>
      <div
        class="bg-gray-800 border border-gray-600 rounded-xl p-8"
      >
        <h2
          class="text-2xl font-bold text-white mb-6"
        >
          Salary Range & Distribution
        </h2>
        <div
          class="grid grid-cols-1 md:grid-cols-4 gap-6 mb-6"
        >
          <div
            class="text-center"
          >
            <p
              class="text-2xl font-bold text-red-400 mb-2"
            >
              $50k
            </p>
            <p
              class="text-gray-400"
            >
              Minimum
            </p>
          </div>
          <div
            class="text-center"
          >
            <p
              class="text-2xl font-bold text-yellow-400 mb-2"
            >
              $60k
            </p>
            <p
              class="text-gray-400"
            >
              25th Percentile
            </p>
          </div>
          <div
            class="text-center"
          >
            <p
              class="text-2xl font-bold text-green-400 mb-2"
            >
              $85k
            </p>
            <p
              class="text-gray-400"
            >
              75th Percentile
            </p>
          </div>
          <div
            class="text-center"
          >
            <p
              class="text-2xl font-bold text-blue-400 mb-2"
            >
              $120k
            </p>
            <p
              class="text-gray-400"
            >
              Maximum
            </p>
          </div>
        </div>
        <div
          class="bg-gray-700 rounded-lg p-4"
        >
          <p
            class="text-gray-300 text-center"
          >
            Most offers fall between 
            $60k
            –
            $85k
            . Use this band as your realistic expectation zone.
          </p>
        </div>
      </div>
      <div
        class="bg-gray-800 border border-gray-600 rounded-xl p-8"
      >
        <h2
          class="text-2xl font-bold text-white mb-6"
        >
          Company Leaderboard
        </h2>
        <div
          class="overflow-x-auto"
        >
          <table
            class="w-full"
          >
            <thead>
              <tr
                class="border-b border-gray-600"
              >
                <th
                  class="text-left p-3 text-gray-300 font-medium"
                >
                  Company
                </th>
                <th
                  class="text-center p-3 text-gray-300 font-medium"
                >
                  Offers
                </th>
                <th
                  class="text-center p-3 text-gray-300 font-medium"
                >
                  Average
                </th>
                <th
                  class="text-center p-3 text-gray-300 font-medium"
                >
                  Range
                </th>
                <th
                  class="text-center p-3 text-gray-300 font-medium"
                >
                  Research
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class="border-b border-gray-700"
              >
                <td
                  class="p-3 text-white font-medium"
                >
                  Google
                </td>
                <td
                  class="p-3 text-center text-gray-300"
                >
                  3
                </td>
                <td
                  class="p-3 text-center text-green-400 font-semibold"
                >
                  $90k
                </td>
                <td
                  class="p-3 text-center text-gray-300"
                >
                  $80k
                  –
                  $100k
                </td>
                <td
                  class="p-3 text-center"
                >
                  <span
                    class="text-gray-500 text-sm"
                  >
                    —
                  </span>
                </td>
              </tr>
              <tr
                class="border-b border-gray-700"
              >
                <td
                  class="p-3 text-white font-medium"
                >
                  Microsoft
                </td>
                <td
                  class="p-3 text-center text-gray-300"
                >
                  2
                </td>
                <td
                  class="p-3 text-center text-green-400 font-semibold"
                >
                  $70k
                </td>
                <td
                  class="p-3 text-center text-gray-300"
                >
                  $65k
                  –
                  $75k
                </td>
                <td
                  class="p-3 text-center"
                >
                  <span
                    class="text-gray-500 text-sm"
                  >
                    —
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="mt-6 bg-blue-900/20 border border-blue-600/30 rounded-lg p-4"
        >
          <p
            class="text-blue-300 text-sm"
          >
            💡 Tip: Lead with data from top-paying companies to justify your ask.
          </p>
        </div>
      </div>
      <div
        class="bg-gray-800 border border-gray-600 rounded-xl p-8"
      >
        <h2
          class="text-2xl font-bold text-white mb-6"
        >
          Salary by Location
        </h2>
        <div
          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
        >
          <div
            class="bg-gray-700 rounded-lg p-6"
          >
            <h3
              class="text-lg font-semibold text-white mb-2"
            >
              San Francisco
            </h3>
            <div
              class="space-y-2"
            >
              <div
                class="flex justify-between"
              >
                <span
                  class="text-gray-400"
                >
                  Offers:
                </span>
                <span
                  class="text-white"
                >
                  5
                </span>
              </div>
              <div
                class="flex justify-between"
              >
                <span
                  class="text-gray-400"
                >
                  Average:
                </span>
                <span
                  class="text-green-400 font-semibold"
                >
                  $80k
                </span>
              </div>
              <div
                class="flex justify-between"
              >
                <span
                  class="text-gray-400"
                >
                  Range:
                </span>
                <span
                  class="text-gray-300"
                >
                  $70k
                  –
                  $90k
                </span>
              </div>
            </div>
          </div>
          <div
            class="bg-gray-700 rounded-lg p-6"
          >
            <h3
              class="text-lg font-semibold text-white mb-2"
            >
              Seattle
            </h3>
            <div
              class="space-y-2"
            >
              <div
                class="flex justify-between"
              >
                <span
                  class="text-gray-400"
                >
                  Offers:
                </span>
                <span
                  class="text-white"
                >
                  3
                </span>
              </div>
              <div
                class="flex justify-between"
              >
                <span
                  class="text-gray-400"
                >
                  Average:
                </span>
                <span
                  class="text-green-400 font-semibold"
                >
                  $70k
                </span>
              </div>
              <div
                class="flex justify-between"
              >
                <span
                  class="text-gray-400"
                >
                  Range:
                </span>
                <span
                  class="text-gray-300"
                >
                  $60k
                  –
                  $80k
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-gray-800 border border-gray-600 rounded-xl p-8"
      >
        <h2
          class="text-2xl font-bold text-white mb-6"
        >
          Recent Offers
        </h2>
        <div
          class="space-y-4"
        >
          <div
            class="flex items-center justify-between p-4 bg-gray-700 rounded-lg border border-gray-600"
          >
            <div>
              <p
                class="font-medium text-white"
              >
                Software Engineer
              </p>
              <p
                class="text-sm text-gray-400"
              >
                Company A
              </p>
              <p
                class="text-sm text-gray-500"
              >
                SF
              </p>
            </div>
            <div
              class="text-right"
            >
              <p
                class="font-bold text-white text-lg"
              >
                $50k
              </p>
              <span
                class="inline-block px-3 py-1 text-xs rounded-full bg-gray-700 text-gray-300"
              />
            </div>
          </div>
          <div
            class="flex items-center justify-between p-4 bg-gray-700 rounded-lg border border-gray-600"
          >
            <div>
              <p
                class="font-medium text-white"
              >
                Developer
              </p>
              <p
                class="text-sm text-gray-400"
              >
                Company B
              </p>
              <p
                class="text-sm text-gray-500"
              >
                NYC
              </p>
            </div>
            <div
              class="text-right"
            >
              <p
                class="font-bold text-white text-lg"
              >
                $60k
              </p>
              <span
                class="inline-block px-3 py-1 text-xs rounded-full bg-gray-700 text-gray-300"
              />
            </div>
          </div>
          <div
            class="flex items-center justify-between p-4 bg-gray-700 rounded-lg border border-gray-600"
          >
            <div>
              <p
                class="font-medium text-white"
              >
                Engineer
              </p>
              <p
                class="text-sm text-gray-400"
              >
                Company C
              </p>
              <p
                class="text-sm text-gray-500"
              >
                Seattle
              </p>
            </div>
            <div
              class="text-right"
            >
              <p
                class="font-bold text-white text-lg"
              >
                $70k
              </p>
              <span
                class="inline-block px-3 py-1 text-xs rounded-full bg-gray-700 text-gray-300"
              />
            </div>
          </div>
          <div
            class="flex items-center justify-between p-4 bg-gray-700 rounded-lg border border-gray-600"
          >
            <div>
              <p
                class="font-medium text-white"
              >
                Developer
              </p>
              <p
                class="text-sm text-gray-400"
              >
                Company D
              </p>
              <p
                class="text-sm text-gray-500"
              >
                Austin
              </p>
            </div>
            <div
              class="text-right"
            >
              <p
                class="font-bold text-white text-lg"
              >
                $80k
              </p>
              <span
                class="inline-block px-3 py-1 text-xs rounded-full bg-gray-700 text-gray-300"
              />
            </div>
          </div>
          <div
            class="flex items-center justify-between p-4 bg-gray-700 rounded-lg border border-gray-600"
          >
            <div>
              <p
                class="font-medium text-white"
              >
                Software Engineer
              </p>
              <p
                class="text-sm text-gray-400"
              >
                Company E
              </p>
              <p
                class="text-sm text-gray-500"
              >
                Boston
              </p>
            </div>
            <div
              class="text-right"
            >
              <p
                class="font-bold text-white text-lg"
              >
                $90k
              </p>
              <span
                class="inline-block px-3 py-1 text-xs rounded-full bg-gray-700 text-gray-300"
              />
            </div>
          </div>
          <div
            class="flex items-center justify-between p-4 bg-gray-700 rounded-lg border border-gray-600"
          >
            <div>
              <p
                class="font-medium text-white"
              >
                Senior Developer
              </p>
              <p
                class="text-sm text-gray-400"
              >
                Company F
              </p>
              <p
                class="text-sm text-gray-500"
              >
                LA
              </p>
            </div>
            <div
              class="text-right"
            >
              <p
                class="font-bold text-white text-lg"
              >
                $100k
              </p>
              <span
                class="inline-block px-3 py-1 text-xs rounded-full bg-gray-700 text-gray-300"
              />
            </div>
          </div>
          <div
            class="flex items-center justify-between p-4 bg-gray-700 rounded-lg border border-gray-600"
          >
            <div>
              <p
                class="font-medium text-white"
              >
                Lead Engineer
              </p>
              <p
                class="text-sm text-gray-400"
              >
                Company G
              </p>
              <p
                class="text-sm text-gray-500"
              >
                Chicago
              </p>
            </div>
            <div
              class="text-right"
            >
              <p
                class="font-bold text-white text-lg"
              >
                $110k
              </p>
              <span
                class="inline-block px-3 py-1 text-xs rounded-full bg-gray-700 text-gray-300"
              />
            </div>
          </div>
          <div
            class="flex items-center justify-between p-4 bg-gray-700 rounded-lg border border-gray-600"
          >
            <div>
              <p
                class="font-medium text-white"
              >
                Principal Engineer
              </p>
              <p
                class="text-sm text-gray-400"
              >
                Company H
              </p>
              <p
                class="text-sm text-gray-500"
              >
                Denver
              </p>
            </div>
            <div
              class="text-right"
            >
              <p
                class="font-bold text-white text-lg"
              >
                $120k
              </p>
              <span
                class="inline-block px-3 py-1 text-xs rounded-full bg-gray-700 text-gray-300"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-gray-800 border border-gray-600 rounded-xl p-8"
      >
        <h2
          class="text-2xl font-bold text-white mb-6"
        >
          Salary Trends Over Time
        </h2>
        <div
          class="mb-6 grid grid-cols-1 md:grid-cols-3 gap-4"
        >
          <div
            class="bg-gray-700 rounded-lg p-4 text-center"
          >
            <p
              class="text-2xl font-bold text-blue-400 mb-2"
            >
              2
            </p>
            <p
              class="text-gray-400"
            >
              Months Tracked
            </p>
          </div>
          <div
            class="bg-gray-700 rounded-lg p-4 text-center"
          >
            <p
              class="text-2xl font-bold text-green-400 mb-2"
            >
              $65k
            </p>
            <p
              class="text-gray-400"
            >
              Latest Average
            </p>
          </div>
          <div
            class="bg-gray-700 rounded-lg p-4 text-center"
          >
            <p
              class="text-2xl font-bold mb-2 text-yellow-400"
            >
              N/A
            </p>
            <p
              class="text-gray-400"
            >
              Recent Growth
            </p>
          </div>
        </div>
        <div
          class="h-80"
        >
          <div
            class="recharts-responsive-container"
            style="width: 100%; height: 100%; min-width: 0;"
          >
            <div
              style="width: 0px; height: 0px; overflow: visible;"
            />
          </div>
        </div>
        <div
          class="mt-6 space-y-4"
        >
          <div
            class="bg-gray-700 rounded-lg p-4"
          >
            <p
              class="text-gray-300 text-sm"
            >
              💡 
              <strong>
                Pro tip:
              </strong>
               Use this trend data to time your job applications and negotiations.
               Focus on companies that pay above your average.
            </p>
          </div>
        </div>
      </div>
      <div
        class="bg-gray-800 border border-gray-600 rounded-xl p-8"
      >
        <h2
          class="text-2xl font-bold text-white mb-6"
        >
          Remote vs Onsite Salary Comparison
        </h2>
        <div
          class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8"
        >
          <div
            class="bg-gray-700 rounded-lg p-6"
          >
            <div
              class="flex items-center space-x-3 mb-4"
            >
              <span
                class="text-2xl"
              >
                🏠
              </span>
              <h3
                class="text-lg font-semibold text-white"
              >
                Remote Roles
              </h3>
            </div>
            <div
              class="space-y-2"
            >
              <div
                class="flex justify-between"
              >
                <span
                  class="text-gray-400"
                >
                  Average:
                </span>
                <span
                  class="text-green-400 font-bold text-xl"
                >
                  $80k
                </span>
              </div>
              <div
                class="flex justify-between"
              >
                <span
                  class="text-gray-400"
                >
                  Offers:
                </span>
                <span
                  class="text-white"
                >
                  3
                </span>
              </div>
            </div>
          </div>
          <div
            class="bg-gray-700 rounded-lg p-6"
          >
            <div
              class="flex items-center space-x-3 mb-4"
            >
              <span
                class="text-2xl"
              >
                🏢
              </span>
              <h3
                class="text-lg font-semibold text-white"
              >
                Onsite Roles
              </h3>
            </div>
            <div
              class="space-y-2"
            >
              <div
                class="flex justify-between"
              >
                <span
                  class="text-gray-400"
                >
                  Average:
                </span>
                <span
                  class="text-blue-400 font-bold text-xl"
                >
                  $70k
                </span>
              </div>
              <div
                class="flex justify-between"
              >
                <span
                  class="text-gray-400"
                >
                  Offers:
                </span>
                <span
                  class="text-white"
                >
                  5
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="h-64 mb-6"
        >
          <div
            class="recharts-responsive-container"
            style="width: 100%; height: 100%; min-width: 0;"
          >
            <div
              style="width: 0px; height: 0px; overflow: visible;"
            />
          </div>
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="bg-gray-700 rounded-lg p-4"
          >
            <p
              class="text-gray-300 text-center"
            >
              Remote roles pay 14.3% more on average. Prioritize remote if optimizing for compensation.
            </p>
          </div>
          <div
            class="rounded-lg p-4 bg-green-900/20 border border-green-600/30"
          >
            <p
              class="text-center font-medium text-green-300"
            >
              💡 
              <strong>
                Significant difference detected!
              </strong>
               Remote roles offer a substantial salary premium in your market.
            </p>
          </div>
          <div
            class="bg-gray-700 rounded-lg p-4"
          >
            <p
              class="text-gray-300 text-sm text-center"
            >
              💡 
              <strong>
                Pro tip:
              </strong>
               Use this data to filter job searches and negotiate based on work arrangement preferences.
            </p>
          </div>
        </div>
      </div>
      <div
        class="bg-gray-800 border border-gray-600 rounded-xl p-8"
      >
        <h2
          class="text-2xl font-bold text-white mb-6"
        >
          Smart Recommendations
        </h2>
        <div
          class="bg-gray-700 rounded-lg p-6 mb-8"
        >
          <h3
            class="text-lg font-semibold text-white mb-4 flex items-center"
          >
            <span
              class="text-2xl mr-3"
            >
              🎯
            </span>
            Executive Summary
          </h3>
          <div
            class="grid grid-cols-1 md:grid-cols-3 gap-4"
          >
            <div
              class="text-center"
            >
              <p
                class="text-2xl font-bold text-blue-400 mb-2"
              >
                $75k
              </p>
              <p
                class="text-gray-400"
              >
                Target Salary
              </p>
            </div>
            <div
              class="text-center"
            >
              <p
                class="text-2xl font-bold text-green-400 mb-2"
              >
                $85k
              </p>
              <p
                class="text-gray-400"
              >
                Negotiation Ceiling
              </p>
            </div>
            <div
              class="text-center"
            >
              <p
                class="text-2xl font-bold text-yellow-400 mb-2"
              >
                3
              </p>
              <p
                class="text-gray-400"
              >
                Action Items
              </p>
            </div>
          </div>
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="border rounded-lg p-6 border-red-500/30 bg-red-900/20"
          >
            <div
              class="flex items-start space-x-4"
            >
              <div
                class="flex-shrink-0"
              >
                <span
                  class="text-3xl"
                >
                  🏢
                </span>
              </div>
              <div
                class="flex-1"
              >
                <div
                  class="flex items-center space-x-2 mb-2"
                >
                  <span
                    class="text-sm"
                  >
                    🔴
                  </span>
                  <h4
                    class="text-lg font-semibold text-white"
                  >
                    Focus on High-Paying Companies
                  </h4>
                </div>
                <p
                  class="text-gray-300 mb-3"
                >
                  Google pays ~20% above your market average. Target similar companies for better compensation.
                </p>
                <div
                  class="bg-gray-800 rounded-lg p-3"
                >
                  <p
                    class="text-sm text-gray-400 mb-1"
                  >
                    💡 
                    <strong>
                      Action:
                    </strong>
                  </p>
                  <p
                    class="text-white"
                  >
                    Apply to companies in the same tier as Google
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="border rounded-lg p-6 border-blue-500/30 bg-blue-900/20"
          >
            <div
              class="flex items-start space-x-4"
            >
              <div
                class="flex-shrink-0"
              >
                <span
                  class="text-3xl"
                >
                  📈
                </span>
              </div>
              <div
                class="flex-1"
              >
                <div
                  class="flex items-center space-x-2 mb-2"
                >
                  <span
                    class="text-sm"
                  >
                    🔵
                  </span>
                  <h4
                    class="text-lg font-semibold text-white"
                  >
                    Limited Data Sample
                  </h4>
                </div>
                <p
                  class="text-gray-300 mb-3"
                >
                  With only 8 offers, your insights may not be fully representative of the market.
                </p>
                <div
                  class="bg-gray-800 rounded-lg p-3"
                >
                  <p
                    class="text-sm text-gray-400 mb-1"
                  >
                    💡 
                    <strong>
                      Action:
                    </strong>
                  </p>
                  <p
                    class="text-white"
                  >
                    Continue collecting offer data for more accurate analytics
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="border rounded-lg p-6 border-red-500/30 bg-red-900/20"
          >
            <div
              class="flex items-start space-x-4"
            >
              <div
                class="flex-shrink-0"
              >
                <span
                  class="text-3xl"
                >
                  🎯
                </span>
              </div>
              <div
                class="flex-1"
              >
                <div
                  class="flex items-center space-x-2 mb-2"
                >
                  <span
                    class="text-sm"
                  >
                    🔴
                  </span>
                  <h4
                    class="text-lg font-semibold text-white"
                  >
                    Wide Salary Range
                  </h4>
                </div>
                <p
                  class="text-gray-300 mb-3"
                >
                  Your offers span a wide range, indicating significant negotiation potential.
                </p>
                <div
                  class="bg-gray-800 rounded-lg p-3"
                >
                  <p
                    class="text-sm text-gray-400 mb-1"
                  >
                    💡 
                    <strong>
                      Action:
                    </strong>
                  </p>
                  <p
                    class="text-white"
                  >
                    Aim for the 75th percentile in negotiations, using your top offers as evidence
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-8 bg-gray-700 rounded-lg p-6"
        >
          <h3
            class="text-lg font-semibold text-white mb-4 flex items-center"
          >
            <span
              class="text-2xl mr-3"
            >
              ⚡
            </span>
            Quick Actions
          </h3>
          <div
            class="grid grid-cols-1 md:grid-cols-2 gap-4"
          >
            <button
              class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-3 rounded-lg font-medium transition-colors"
            >
              📊 Export for Negotiations
            </button>
            <button
              class="bg-green-600 hover:bg-green-700 text-white px-4 py-3 rounded-lg font-medium transition-colors"
            >
              🎯 Set Salary Target
            </button>
          </div>
        </div>
        <div
          class="mt-6 bg-blue-900/20 border border-blue-600/30 rounded-lg p-4"
        >
          <p
            class="text-blue-300 text-sm"
          >
            💡 
            <strong>
              Pro tip:
            </strong>
             Use these insights to prepare for salary negotiations. Having data-backed evidence significantly improves your bargaining position.
          </p>
        </div>
      </div>
      <div
        class="bg-gray-800 border border-gray-600 rounded-xl p-8 text-center"
      >
        <h2
          class="text-2xl font-bold text-white mb-4"
        >
          Export Your Data
        </h2>
        <p
          class="text-gray-300 mb-6"
        >
          Download your salary analytics summary for negotiations and career planning.
        </p>
        <div
          class="flex justify-center space-x-4"
        >
          <button
            class="bg-blue-600 hover:bg-blue-700 disabled:bg-gray-600 disabled:cursor-not-allowed text-white px-6 py-3 rounded-lg font-medium transition-colors"
          >
            📄 Export as Markdown
          </button>
          <button
            class="bg-green-600 hover:bg-green-700 disabled:bg-gray-700 disabled:cursor-not-allowed text-white px-6 py-3 rounded-lg font-medium transition-colors"
          >
            📊 Export as CSV
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
